kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwmp
  namespace: package-tracking
spec:
  selector:
    app: dwmp
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
